# corokafka

./: .gitignore  .travis.yml  CMakeLists.txt  CONFIGURATION.md  CONTRIBUTING.md  Doxyfile.in  Jenkinsfile  README.md
corokafka/: .gitignore  CMakeLists.txt  CONFIGURATION.md  README.md  corokafka.h  corokafka.h.in  corokafka.pc.in  corokafka_callbacks.h  corokafka_configuration.cpp  corokafka_configuration.h  corokafka_configuration_builder.cpp  corokafka_configuration_builder.h  corokafka_connector.cpp  corokafka_connector.h  corokafka_connector_configuration.cpp  corokafka_connector_configuration.h  corokafka_consumer_configuration.cpp  corokafka_consumer_configuration.h  corokafka_consumer_manager.cpp  corokafka_consumer_manager.h  corokafka_consumer_metadata.cpp  corokafka_consumer_metadata.h  corokafka_consumer_topic_entry.h  corokafka_delivery_report.cpp  corokafka_delivery_report.h  corokafka_deserializer.h  corokafka_exception.h  corokafka_header_pack.cpp  corokafka_header_pack.h  corokafka_header_ref.h  corokafka_headers.h  corokafka_message.h  corokafka_metadata.cpp  corokafka_metadata.h  corokafka_offset_map.h  corokafka_offset_watermark.cpp  corokafka_offset_watermark.h  corokafka_packed_opaque.cpp  corokafka_packed_opaque.h  corokafka_producer_configuration.cpp  (+17 more)
corokafka/cmake/: CoroKafkaConfig.cmake.in  CoroKafkaHelpers.cmake  FindCppKafka.cmake  FindQuantum.cmake  FindRdKafka.cmake
corokafka/corokafka/: CMakeLists.txt  corokafka.h  corokafka_callbacks.h  corokafka_configuration.cpp  corokafka_configuration.h  corokafka_configuration_builder.h  corokafka_connector.cpp  corokafka_connector.h  corokafka_connector_configuration.cpp  corokafka_connector_configuration.h  corokafka_consumer_configuration.cpp  corokafka_consumer_configuration.h  corokafka_consumer_manager.cpp  corokafka_consumer_manager.h  corokafka_consumer_metadata.cpp  corokafka_consumer_metadata.h  corokafka_consumer_topic_entry.h  corokafka_delivery_report.cpp  corokafka_delivery_report.h  corokafka_deserializer.h  corokafka_header_pack.cpp  corokafka_header_pack.h  corokafka_headers.h  corokafka_message.h  corokafka_metadata.cpp  corokafka_metadata.h  corokafka_offset_map.h  corokafka_packed_opaque.cpp  corokafka_packed_opaque.h  corokafka_producer_configuration.cpp  corokafka_producer_configuration.h  corokafka_producer_manager.cpp  corokafka_producer_manager.h  corokafka_producer_metadata.cpp  corokafka_producer_metadata.h  corokafka_producer_topic_entry.h  corokafka_received_message.h  corokafka_receiver.h  corokafka_sent_message.cpp  corokafka_sent_message.h  (+4 more)
corokafka/docs/: annotated.html  annotated_dup.js  classes.html  dir_020e4a53e97f78b22783b09a7c932b0c.html  dir_020e4a53e97f78b22783b09a7c932b0c.js  dir_15e745cfa6718f09f4a3a3482dd2e260.html  dir_15e745cfa6718f09f4a3a3482dd2e260.js  dir_3808e3f8fe545b07b1d2715928fb0eea.html  dir_3808e3f8fe545b07b1d2715928fb0eea.js  dir_5e6c7270b5ef339bc449abd10a6beef6.html  dir_5e6c7270b5ef339bc449abd10a6beef6.js  dir_615db02218da56f64c5c087e09c01aed.html  dir_615db02218da56f64c5c087e09c01aed.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_7735072eb61a0e27e87215597702dac5.html  dir_7735072eb61a0e27e87215597702dac5.js  dir_f0f3e2b7ec36730d4757e0995a84a586.html  dir_f0f3e2b7ec36730d4757e0995a84a586.js  files.html  functions.html  functions_a.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_enum.html  functions_f.html  functions_func.html  functions_func.js  functions_func_b.html  functions_func_c.html  functions_func_d.html  functions_func_e.html  functions_func_f.html  functions_func_g.html  functions_func_h.html  functions_func_i.html  functions_func_m.html  functions_func_n.html  (+47 more)
corokafka/impl/: corokafka_connector_impl.cpp  corokafka_connector_impl.h  corokafka_consumer_configuration_impl.h  corokafka_consumer_manager_impl.cpp  corokafka_consumer_manager_impl.h  corokafka_consumer_metadata_impl.cpp  corokafka_consumer_metadata_impl.h  corokafka_header_pack_impl.h  corokafka_metadata_impl.cpp  corokafka_metadata_impl.h  corokafka_offset_manager_impl.cpp  corokafka_offset_manager_impl.h  corokafka_producer_configuration_impl.h  corokafka_producer_manager_impl.cpp  corokafka_producer_manager_impl.h  corokafka_producer_metadata_impl.cpp  corokafka_producer_metadata_impl.h  corokafka_received_message_impl.h  corokafka_sent_message_impl.cpp  corokafka_sent_message_impl.h
corokafka/interface/: corokafka_iconnector.h  corokafka_iconsumer_manager.h  corokafka_iconsumer_metadata.h  corokafka_imessage.h  corokafka_imetadata.h  corokafka_impl.h  corokafka_ioffset_manager.h  corokafka_iproducer_manager.h  corokafka_iproducer_metadata.h  corokafka_ireceived_message.h  corokafka_isent_message.h
corokafka/mock/: corokafka_connector_mock.cpp  corokafka_connector_mock.h  corokafka_consumer_manager_mock.cpp  corokafka_consumer_manager_mock.h  corokafka_consumer_metadata_mock.cpp  corokafka_consumer_metadata_mock.h  corokafka_message_mock.cpp  corokafka_message_mock.h  corokafka_metadata_mock.cpp  corokafka_metadata_mock.h  corokafka_offset_manager_mock.cpp  corokafka_offset_manager_mock.h  corokafka_producer_manager_mock.cpp  corokafka_producer_manager_mock.h  corokafka_producer_metadata_mock.cpp  corokafka_producer_metadata_mock.h  corokafka_received_message_mock.cpp  corokafka_received_message_mock.h  corokafka_sent_message_mock.cpp  corokafka_sent_message_mock.h  corokafka_topic_mock.cpp  corokafka_topic_mock.h
corokafka/tests/: CMakeLists.txt
corokafka/utils/: corokafka_interval_set.h  corokafka_json_builder.h  (+3 more)
tests/: CMakeLists.txt  corokafka_tests.cpp  corokafka_tests_1_connector.cpp  corokafka_tests_2_producer.cpp  corokafka_tests_3_consumer.cpp  corokafka_tests_4_dispatcher.cpp  corokafka_tests_callbacks.cpp  corokafka_tests_callbacks.h  corokafka_tests_consumer.cpp  corokafka_tests_interval_set.cpp  corokafka_tests_main.cpp  corokafka_tests_offset_manager.cpp  corokafka_tests_producer.cpp  corokafka_tests_program_options.h  corokafka_tests_topics.h  corokafka_tests_utils.h
(+365 files in other folders)
